--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "hungarian-transparency",
+   "metadata": {},
+   "source": [
+    "# More Examples\n",
+    "\n",
+    "This notebook contains more examples, including a largeer-scale example with 1 million points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "agreed-heater",
+   "id": "married-halifax",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "narrative-stuff",
+   "id": "intermediate-balance",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "working-bradley",
+   "id": "north-effect",
    "metadata": {},
    "source": [
     "## Simple Test"
@@ -129,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "joint-moral",
+   "id": "complex-interview",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "irish-finding",
+   "id": "assured-athens",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "respective-mistress",
+   "id": "opposed-robert",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acquired-championship",
+   "id": "julian-consequence",
    "metadata": {},
    "source": [
     "# Short-Hand Test"
@@ -224,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "finnish-notebook",
+   "id": "surrounded-discharge",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "static-flower",
+   "id": "lonely-armor",
    "metadata": {},
    "source": [
     "# Large-Scale Test"
@@ -270,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "advance-keyboard",
+   "id": "deluxe-illustration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "mysterious-surge",
+   "id": "educated-cheat",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sixth-potential",
+   "id": "advisory-answer",
    "metadata": {},
    "outputs": [],
    "source": []
