Link to Ricky Reusser's awesome writeup

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# More Examples\n",
     "\n",
-    "This notebook contains more examples, including a larger-scale example with 1 million points."
+    "This notebook contains more examples, including a [larger-scale example with 1 million points](#Large-Scale-Test)."
    ]
   },
   {
@@ -59,43 +59,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.244605</td>\n",
-       "      <td>0.751913</td>\n",
-       "      <td>0.445654</td>\n",
+       "      <td>0.546364</td>\n",
+       "      <td>0.510671</td>\n",
+       "      <td>0.070020</td>\n",
        "      <td>C</td>\n",
-       "      <td>0.267884</td>\n",
+       "      <td>0.963827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.341027</td>\n",
-       "      <td>0.005751</td>\n",
-       "      <td>0.834293</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0.155500</td>\n",
+       "      <td>0.292442</td>\n",
+       "      <td>0.707873</td>\n",
+       "      <td>0.563952</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0.527695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.790780</td>\n",
-       "      <td>0.956405</td>\n",
-       "      <td>0.055481</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.073840</td>\n",
+       "      <td>0.817121</td>\n",
+       "      <td>0.202443</td>\n",
+       "      <td>0.414786</td>\n",
+       "      <td>B</td>\n",
+       "      <td>0.141352</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.863923</td>\n",
-       "      <td>0.514470</td>\n",
-       "      <td>0.196359</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.546018</td>\n",
+       "      <td>0.631138</td>\n",
+       "      <td>0.422182</td>\n",
+       "      <td>0.849178</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0.267460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.533779</td>\n",
-       "      <td>0.051747</td>\n",
-       "      <td>0.142819</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.842212</td>\n",
+       "      <td>0.320460</td>\n",
+       "      <td>0.653526</td>\n",
+       "      <td>0.957330</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0.146649</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -103,11 +103,11 @@
       ],
       "text/plain": [
        "          x         y     value group       bla\n",
-       "0  0.244605  0.751913  0.445654     C  0.267884\n",
-       "1  0.341027  0.005751  0.834293     D  0.155500\n",
-       "2  0.790780  0.956405  0.055481     C  0.073840\n",
-       "3  0.863923  0.514470  0.196359     E  0.546018\n",
-       "4  0.533779  0.051747  0.142819     F  0.842212"
+       "0  0.546364  0.510671  0.070020     C  0.963827\n",
+       "1  0.292442  0.707873  0.563952     F  0.527695\n",
+       "2  0.817121  0.202443  0.414786     B  0.141352\n",
+       "3  0.631138  0.422182  0.849178     G  0.267460\n",
+       "4  0.320460  0.653526  0.957330     D  0.146649"
       ]
      },
      "execution_count": 2,
@@ -145,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6d6e8d2b7f44808b4afd6c1ca675ca6",
+       "model_id": "44102471161c416386f99a43f25d1e06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x13c0b7460>"
+       "<jscatter.jscatter.Scatter at 0x11cfb74f0>"
       ]
      },
      "execution_count": 4,
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03a93df24f0945e1a7a2ea92d429b01c",
+       "model_id": "f67b3078470045aba73c7f872ae086ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +234,9 @@
    "id": "lonely-armor",
    "metadata": {},
    "source": [
-    "# Large-Scale Test"
+    "# Large-Scale Test\n",
+    "\n",
+    "In the following we're going to visualize the Roessler Attractor using 1 million points. This example is taken from the [absolutely fantastic writeup by the wonderful Ricky Reusser](https://observablehq.com/@rreusser/selecting-the-right-opacity-for-2d-point-clouds). Ricky, you're the best!"
    ]
   },
   {
@@ -306,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "educated-cheat",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baabd0726038417b8a589fde5d22a2be",
+       "model_id": "786fc1649b7042ea915f0e286b0ab279",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,6 +330,14 @@
    "source": [
     "points = np.asarray(roesslerAttractor(1000000))\n",
     "jscatter.plot(points[:,0], points[:,1], height=640)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a809a644-6730-4000-b733-1322b6059a0c",
+   "metadata": {},
+   "source": [
+    "Note, as you're zooming in the point opacity is automatically adjusted based the current number of points in the view. This feature is an extension from the dynamic point opacity introduced in [Ricky Reusser's fantastic writeup](https://observablehq.com/@rreusser/selecting-the-right-opacity-for-2d-point-clouds)."
    ]
   },
   {
