Support color map dictionaries and string data

--- a/notebooks/get-started.ipynb
+++ b/notebooks/get-started.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "526875d8ab484eeca15f8a46cbcd9b8e",
+       "model_id": "10f6f0cfa967464789b54883bc8f2545",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b47bf36398f49ca87a6dd96215115a3",
+       "model_id": "6ff207001f0040f28cffa4b231f243e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,10 +78,9 @@
     "import pandas as pd\n",
     "\n",
     "data = np.random.rand(500, 4)\n",
-    "data[:,3] = np.round(data[:,3]).astype(int)\n",
     "\n",
     "df = pd.DataFrame(data, columns=['mass', 'speed', 'pval', 'group'])\n",
-    "df['group'] = df['group'].astype('int').astype('category').map(lambda c: chr(65 + c), na_action=None)\n",
+    "df['group'] = df['group'].map(lambda c: chr(65 + round(c)), na_action=None)\n",
     "\n",
     "jscatter.plot(data=df, x='mass', y='speed')"
    ]
@@ -103,7 +102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdd6b22a6f0f4de88ba0aa703860f9e8",
+       "model_id": "b21a63f5c26d40149509817a9970926e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad814771577a4b1c96c75314552a4df5",
+       "model_id": "2586e9a9c88f456a9f23601c26aa8138",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,25 +211,26 @@
     {
      "data": {
       "text/plain": [
-       "array([  3,   6,   7,   8,  10,  12,  14,  16,  21,  23,  24,  26,  28,\n",
-       "        34,  35,  40,  42,  43,  45,  46,  48,  49,  52,  54,  56,  59,\n",
-       "        60,  61,  63,  65,  67,  68,  71,  72,  73,  77,  79,  82,  83,\n",
-       "        84,  85,  86,  87,  88,  90,  94,  96, 104, 108, 110, 115, 117,\n",
-       "       121, 123, 124, 126, 130, 132, 133, 135, 138, 140, 141, 142, 143,\n",
-       "       145, 151, 152, 154, 158, 160, 161, 162, 165, 166, 169, 171, 173,\n",
-       "       174, 176, 178, 181, 182, 184, 185, 189, 190, 191, 192, 195, 198,\n",
-       "       201, 202, 203, 204, 209, 210, 211, 212, 213, 215, 216, 217, 218,\n",
-       "       219, 220, 221, 222, 223, 224, 225, 227, 228, 229, 234, 235, 239,\n",
-       "       240, 241, 242, 245, 247, 248, 250, 253, 255, 257, 259, 260, 261,\n",
-       "       262, 263, 266, 269, 272, 273, 277, 279, 282, 283, 284, 285, 287,\n",
-       "       290, 291, 293, 298, 299, 302, 303, 304, 306, 313, 314, 315, 324,\n",
-       "       326, 328, 329, 331, 333, 334, 335, 339, 344, 345, 346, 348, 352,\n",
-       "       354, 357, 358, 359, 360, 361, 368, 371, 372, 374, 377, 379, 381,\n",
-       "       382, 384, 385, 386, 387, 390, 391, 396, 397, 399, 400, 401, 403,\n",
-       "       404, 405, 406, 408, 409, 410, 411, 414, 415, 417, 418, 419, 423,\n",
-       "       424, 425, 426, 428, 429, 430, 431, 432, 434, 437, 440, 441, 443,\n",
-       "       445, 455, 456, 462, 465, 466, 470, 472, 478, 483, 484, 487, 488,\n",
-       "       490, 491, 492, 493, 496, 498, 499], dtype=uint32)"
+       "array([  2,   3,   5,   6,   7,   9,  10,  11,  13,  15,  16,  17,  18,\n",
+       "        23,  24,  26,  27,  28,  30,  31,  32,  34,  35,  37,  41,  42,\n",
+       "        43,  47,  49,  51,  54,  55,  56,  57,  58,  60,  69,  70,  71,\n",
+       "        77,  79,  81,  84,  87,  88,  89,  91,  92,  94,  95,  97,  98,\n",
+       "        99, 102, 103, 106, 116, 117, 119, 121, 125, 126, 129, 130, 135,\n",
+       "       138, 140, 142, 146, 147, 148, 150, 151, 153, 154, 156, 158, 160,\n",
+       "       161, 162, 164, 165, 166, 171, 172, 179, 180, 182, 183, 186, 187,\n",
+       "       190, 191, 193, 195, 197, 198, 199, 200, 203, 204, 206, 209, 211,\n",
+       "       213, 216, 217, 218, 219, 220, 221, 223, 226, 228, 229, 230, 236,\n",
+       "       240, 243, 245, 246, 250, 257, 259, 260, 261, 262, 264, 265, 267,\n",
+       "       269, 270, 271, 272, 273, 275, 276, 278, 279, 281, 282, 285, 287,\n",
+       "       290, 293, 294, 298, 299, 300, 301, 303, 304, 307, 309, 310, 314,\n",
+       "       317, 318, 320, 322, 323, 330, 331, 332, 335, 337, 338, 339, 343,\n",
+       "       346, 347, 349, 351, 355, 356, 357, 360, 361, 363, 364, 366, 369,\n",
+       "       370, 373, 375, 377, 378, 381, 384, 385, 386, 387, 388, 391, 392,\n",
+       "       395, 397, 398, 402, 408, 409, 410, 412, 417, 418, 421, 422, 423,\n",
+       "       424, 425, 428, 430, 431, 435, 436, 437, 439, 442, 446, 447, 452,\n",
+       "       454, 456, 458, 459, 460, 462, 463, 464, 465, 466, 467, 468, 473,\n",
+       "       476, 477, 478, 479, 480, 484, 485, 486, 488, 490, 493, 494, 495,\n",
+       "       497, 499], dtype=uint32)"
       ]
      },
      "execution_count": 6,
@@ -244,7 +244,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Linking Multiple Scatter Plots\n",
     "\n",
@@ -259,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "948c735c03f344ccb631982235394dac",
+       "model_id": "7f293050ace7457e849a362e54f3ad39",
        "version_major": 2,
        "version_minor": 0
       },
