--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "570d63e9-832c-45cd-ab00-8869401c7916",
+   "metadata": {},
+   "source": [
+    "We'll start by creating some dummy data that we can use to test jupyter-scatter."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "intermediate-balance",
@@ -59,43 +67,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.546364</td>\n",
-       "      <td>0.510671</td>\n",
-       "      <td>0.070020</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.963827</td>\n",
+       "      <td>0.756374</td>\n",
+       "      <td>0.409265</td>\n",
+       "      <td>0.967558</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0.382190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.292442</td>\n",
-       "      <td>0.707873</td>\n",
-       "      <td>0.563952</td>\n",
+       "      <td>0.451880</td>\n",
+       "      <td>0.046015</td>\n",
+       "      <td>0.215629</td>\n",
        "      <td>F</td>\n",
-       "      <td>0.527695</td>\n",
+       "      <td>0.380152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.817121</td>\n",
-       "      <td>0.202443</td>\n",
-       "      <td>0.414786</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.141352</td>\n",
+       "      <td>0.998402</td>\n",
+       "      <td>0.051095</td>\n",
+       "      <td>0.920037</td>\n",
+       "      <td>C</td>\n",
+       "      <td>0.245193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.631138</td>\n",
-       "      <td>0.422182</td>\n",
-       "      <td>0.849178</td>\n",
-       "      <td>G</td>\n",
-       "      <td>0.267460</td>\n",
+       "      <td>0.873022</td>\n",
+       "      <td>0.763803</td>\n",
+       "      <td>0.571935</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0.772484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.320460</td>\n",
-       "      <td>0.653526</td>\n",
-       "      <td>0.957330</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0.146649</td>\n",
+       "      <td>0.188142</td>\n",
+       "      <td>0.682402</td>\n",
+       "      <td>0.668805</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0.714962</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -103,11 +111,11 @@
       ],
       "text/plain": [
        "          x         y     value group       bla\n",
-       "0  0.546364  0.510671  0.070020     C  0.963827\n",
-       "1  0.292442  0.707873  0.563952     F  0.527695\n",
-       "2  0.817121  0.202443  0.414786     B  0.141352\n",
-       "3  0.631138  0.422182  0.849178     G  0.267460\n",
-       "4  0.320460  0.653526  0.957330     D  0.146649"
+       "0  0.756374  0.409265  0.967558     A  0.382190\n",
+       "1  0.451880  0.046015  0.215629     F  0.380152\n",
+       "2  0.998402  0.051095  0.920037     C  0.245193\n",
+       "3  0.873022  0.763803  0.571935     D  0.772484\n",
+       "4  0.188142  0.682402  0.668805     F  0.714962"
       ]
      },
      "execution_count": 2,
@@ -118,13 +126,8 @@
    "source": [
     "n = 500\n",
     "data = np.random.rand(n, 5)\n",
-    "data[:,3] = np.round(data[:,3] * 7).astype(int)\n",
-    "\n",
-    "df = pd.DataFrame(\n",
-    "    data,\n",
-    "    columns=['x', 'y', 'value', 'group', 'bla'],\n",
-    ")\n",
-    "df['group'] = df['group'].astype('int').astype('category').map(lambda c: chr(65 + c), na_action=None)\n",
+    "df = pd.DataFrame(data, columns=['x', 'y', 'value', 'group', 'bla'])\n",
+    "df['group'] = df['group'].map(lambda c: chr(65 + round(c * 7)), na_action=None)\n",
     "df.head(5)"
    ]
   },
@@ -133,7 +136,9 @@
    "id": "north-effect",
    "metadata": {},
    "source": [
-    "## Simple Test"
+    "## Simple Test\n",
+    "\n",
+    "In this example, we'll demonstrate the functional API."
    ]
   },
   {
@@ -145,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44102471161c416386f99a43f25d1e06",
+       "model_id": "fb388ab959914e25825e11398621c38a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,6 +168,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b511ae5e-6e5c-4b0b-9261-a552e037ca33",
+   "metadata": {},
+   "source": [
+    "A useful feature of ipywidgets is that you can change the scatter plot after displaying it. Using the functional API we can chain multiple changes together."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "assured-athens",
@@ -171,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x11cfb74f0>"
+       "<jscatter.jscatter.Scatter at 0x1476fe770>"
       ]
      },
      "execution_count": 4,
@@ -185,22 +198,64 @@
   },
   {
    "cell_type": "markdown",
-   "id": "julian-consequence",
+   "id": "12682e2f-1198-4f3f-b6a3-98e41109da8e",
    "metadata": {},
    "source": [
-    "# Short-Hand Test"
+    "Jupyter-scatter provides sensible default configurations. For instance, in the example above jupyter-scatter employs the colorblind safe Okabe and Ito colormap to visualize the `group` attribute of the data points.\n",
+    "\n",
+    "We can override the colormap using any Matplotlib color map or define our own categorical colormap easily using a dictionary of category-color pairs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "bb748369-1a37-4fdb-bbbf-6a18e667230a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<jscatter.jscatter.Scatter at 0x1476fe770>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scatter.color(map=dict(\n",
+    "  A='red',\n",
+    "  B='blue',\n",
+    "  C='yellow',\n",
+    "  D='pink',\n",
+    "  E='green',\n",
+    "  F='brown',\n",
+    "  G='gray',\n",
+    "  H='#56B4E9'\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "julian-consequence",
+   "metadata": {},
+   "source": [
+    "# Short-Hand Test\n",
+    "\n",
+    "If you only want to plot something once, you can short-hand API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "surrounded-discharge",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f67b3078470045aba73c7f872ae086ba",
+       "model_id": "c1f414e45db04df990a14f781b2ec19c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,12 +291,12 @@
    "source": [
     "# Large-Scale Test\n",
     "\n",
-    "In the following we're going to visualize the Roessler Attractor using 1 million points. This example is taken from the [absolutely fantastic writeup by the wonderful Ricky Reusser](https://observablehq.com/@rreusser/selecting-the-right-opacity-for-2d-point-clouds). Ricky, you're the best!"
+    "In the following we're going to visualize the Rössler Attractor using 1 million points. This example is taken from the [absolutely fantastic writeup by the wonderful Ricky Reusser](https://observablehq.com/@rreusser/selecting-the-right-opacity-for-2d-point-clouds). Ricky, you're the best!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "deluxe-illustration",
    "metadata": {},
    "outputs": [],
@@ -308,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "educated-cheat",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "786fc1649b7042ea915f0e286b0ab279",
+       "model_id": "d5451c71848d466d96d7e1d831f86bce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +392,7 @@
    "id": "a809a644-6730-4000-b733-1322b6059a0c",
    "metadata": {},
    "source": [
-    "Note, as you're zooming in the point opacity is automatically adjusted based the current number of points in the view. This feature is an extension from the dynamic point opacity introduced in [Ricky Reusser's fantastic writeup](https://observablehq.com/@rreusser/selecting-the-right-opacity-for-2d-point-clouds)."
+    "Note, as you're zooming in, the point opacity is automatically adjusted based the number of points within the view. This feature is an extension from Ricky Reusser's dynamic point opacity introduced in [his fantastic writeup](https://observablehq.com/@rreusser/selecting-the-right-opacity-for-2d-point-clouds) mentioned above."
    ]
   },
   {
