--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -67,43 +67,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.756374</td>\n",
-       "      <td>0.409265</td>\n",
-       "      <td>0.967558</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0.382190</td>\n",
+       "      <td>0.276234</td>\n",
+       "      <td>0.088603</td>\n",
+       "      <td>0.126198</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0.085589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.451880</td>\n",
-       "      <td>0.046015</td>\n",
-       "      <td>0.215629</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.380152</td>\n",
+       "      <td>0.212658</td>\n",
+       "      <td>0.640527</td>\n",
+       "      <td>0.497454</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.831274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.998402</td>\n",
-       "      <td>0.051095</td>\n",
-       "      <td>0.920037</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.245193</td>\n",
+       "      <td>0.124714</td>\n",
+       "      <td>0.035353</td>\n",
+       "      <td>0.627569</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.451537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.873022</td>\n",
-       "      <td>0.763803</td>\n",
-       "      <td>0.571935</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0.772484</td>\n",
+       "      <td>0.330655</td>\n",
+       "      <td>0.215086</td>\n",
+       "      <td>0.090695</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0.266587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.188142</td>\n",
-       "      <td>0.682402</td>\n",
-       "      <td>0.668805</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.714962</td>\n",
+       "      <td>0.231471</td>\n",
+       "      <td>0.063552</td>\n",
+       "      <td>0.609223</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0.394805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -111,11 +111,11 @@
       ],
       "text/plain": [
        "          x         y     value group       bla\n",
-       "0  0.756374  0.409265  0.967558     A  0.382190\n",
-       "1  0.451880  0.046015  0.215629     F  0.380152\n",
-       "2  0.998402  0.051095  0.920037     C  0.245193\n",
-       "3  0.873022  0.763803  0.571935     D  0.772484\n",
-       "4  0.188142  0.682402  0.668805     F  0.714962"
+       "0  0.276234  0.088603  0.126198     D  0.085589\n",
+       "1  0.212658  0.640527  0.497454     E  0.831274\n",
+       "2  0.124714  0.035353  0.627569     E  0.451537\n",
+       "3  0.330655  0.215086  0.090695     F  0.266587\n",
+       "4  0.231471  0.063552  0.609223     A  0.394805"
       ]
      },
      "execution_count": 2,
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb388ab959914e25825e11398621c38a",
+       "model_id": "f6fe30060a5a4891a7573da8d79504c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x1476fe770>"
+       "<jscatter.jscatter.Scatter at 0x16281bac0>"
       ]
      },
      "execution_count": 4,
@@ -215,7 +215,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x1476fe770>"
+       "<jscatter.jscatter.Scatter at 0x16281bac0>"
       ]
      },
      "execution_count": 5,
@@ -255,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1f414e45db04df990a14f781b2ec19c",
+       "model_id": "b4a769edab444782a60df8824c7d5796",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,7 +370,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5451c71848d466d96d7e1d831f86bce",
+       "model_id": "20fa191a5d5b4dbeb1510dbea51a6c0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
