Add support for axes labels
Close #29

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -67,43 +67,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.276234</td>\n",
-       "      <td>0.088603</td>\n",
-       "      <td>0.126198</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0.085589</td>\n",
+       "      <td>0.519439</td>\n",
+       "      <td>0.533727</td>\n",
+       "      <td>0.289151</td>\n",
+       "      <td>E</td>\n",
+       "      <td>0.841719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.212658</td>\n",
-       "      <td>0.640527</td>\n",
-       "      <td>0.497454</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.831274</td>\n",
+       "      <td>0.701327</td>\n",
+       "      <td>0.544183</td>\n",
+       "      <td>0.905323</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0.465165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.124714</td>\n",
-       "      <td>0.035353</td>\n",
-       "      <td>0.627569</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.451537</td>\n",
+       "      <td>0.147098</td>\n",
+       "      <td>0.972666</td>\n",
+       "      <td>0.554893</td>\n",
+       "      <td>B</td>\n",
+       "      <td>0.868960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.330655</td>\n",
-       "      <td>0.215086</td>\n",
-       "      <td>0.090695</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.266587</td>\n",
+       "      <td>0.280768</td>\n",
+       "      <td>0.414519</td>\n",
+       "      <td>0.131672</td>\n",
+       "      <td>C</td>\n",
+       "      <td>0.628633</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.231471</td>\n",
-       "      <td>0.063552</td>\n",
-       "      <td>0.609223</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0.394805</td>\n",
+       "      <td>0.282146</td>\n",
+       "      <td>0.162423</td>\n",
+       "      <td>0.046793</td>\n",
+       "      <td>C</td>\n",
+       "      <td>0.112329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -111,11 +111,11 @@
       ],
       "text/plain": [
        "          x         y     value group       bla\n",
-       "0  0.276234  0.088603  0.126198     D  0.085589\n",
-       "1  0.212658  0.640527  0.497454     E  0.831274\n",
-       "2  0.124714  0.035353  0.627569     E  0.451537\n",
-       "3  0.330655  0.215086  0.090695     F  0.266587\n",
-       "4  0.231471  0.063552  0.609223     A  0.394805"
+       "0  0.519439  0.533727  0.289151     E  0.841719\n",
+       "1  0.701327  0.544183  0.905323     F  0.465165\n",
+       "2  0.147098  0.972666  0.554893     B  0.868960\n",
+       "3  0.280768  0.414519  0.131672     C  0.628633\n",
+       "4  0.282146  0.162423  0.046793     C  0.112329"
       ]
      },
      "execution_count": 2,
@@ -127,7 +127,7 @@
     "n = 500\n",
     "data = np.random.rand(n, 5)\n",
     "df = pd.DataFrame(data, columns=['x', 'y', 'value', 'group', 'bla'])\n",
-    "df['group'] = df['group'].map(lambda c: chr(65 + round(c * 7)), na_action=None)\n",
+    "df['group'] = df['x'].map(lambda x: chr(65 + round(x * 7)))\n",
     "df.head(5)"
    ]
   },
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6fe30060a5a4891a7573da8d79504c7",
+       "model_id": "c1a29f5019874cce95031bc917487213",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x16281bac0>"
+       "<jscatter.jscatter.Scatter at 0x13021baf0>"
       ]
      },
      "execution_count": 4,
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "scatter.color(by='group').size(6).height(320).selection(df.query('x < 0.5').index)"
+    "scatter.color(by='group').size(6).height(320).selection(df.query('x < 0.5').index).axes(grid=True, labels=['X', 'Y'])"
    ]
   },
   {
@@ -215,7 +215,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x16281bac0>"
+       "<jscatter.jscatter.Scatter at 0x13021baf0>"
       ]
      },
      "execution_count": 5,
@@ -225,9 +225,9 @@
    ],
    "source": [
     "scatter.color(map=dict(\n",
-    "  A='red',\n",
+    "  C='red',\n",
     "  B='blue',\n",
-    "  C='yellow',\n",
+    "  A='yellow',\n",
     "  D='pink',\n",
     "  E='green',\n",
     "  F='brown',\n",
@@ -248,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "surrounded-discharge",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4a769edab444782a60df8824c7d5796",
+       "model_id": "57adfbc3405f40baae4727f2b2ce4779",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "deluxe-illustration",
    "metadata": {},
    "outputs": [],
@@ -363,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "educated-cheat",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20fa191a5d5b4dbeb1510dbea51a6c0c",
+       "model_id": "b0c8f2745fee4f93b13e566cc2d4317e",
        "version_major": 2,
        "version_minor": 0
       },
