Add support for legends

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -67,43 +67,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.519439</td>\n",
-       "      <td>0.533727</td>\n",
-       "      <td>0.289151</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.841719</td>\n",
+       "      <td>0.228503</td>\n",
+       "      <td>0.134184</td>\n",
+       "      <td>0.463158</td>\n",
+       "      <td>C</td>\n",
+       "      <td>0.966027</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.701327</td>\n",
-       "      <td>0.544183</td>\n",
-       "      <td>0.905323</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.465165</td>\n",
+       "      <td>0.873693</td>\n",
+       "      <td>0.923344</td>\n",
+       "      <td>0.474707</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0.278722</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.147098</td>\n",
-       "      <td>0.972666</td>\n",
-       "      <td>0.554893</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.868960</td>\n",
+       "      <td>0.450566</td>\n",
+       "      <td>0.361604</td>\n",
+       "      <td>0.800696</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0.443519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.280768</td>\n",
-       "      <td>0.414519</td>\n",
-       "      <td>0.131672</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.628633</td>\n",
+       "      <td>0.418162</td>\n",
+       "      <td>0.145864</td>\n",
+       "      <td>0.940385</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0.058974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.282146</td>\n",
-       "      <td>0.162423</td>\n",
-       "      <td>0.046793</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.112329</td>\n",
+       "      <td>0.833118</td>\n",
+       "      <td>0.815866</td>\n",
+       "      <td>0.988112</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0.782633</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -111,11 +111,11 @@
       ],
       "text/plain": [
        "          x         y     value group       bla\n",
-       "0  0.519439  0.533727  0.289151     E  0.841719\n",
-       "1  0.701327  0.544183  0.905323     F  0.465165\n",
-       "2  0.147098  0.972666  0.554893     B  0.868960\n",
-       "3  0.280768  0.414519  0.131672     C  0.628633\n",
-       "4  0.282146  0.162423  0.046793     C  0.112329"
+       "0  0.228503  0.134184  0.463158     C  0.966027\n",
+       "1  0.873693  0.923344  0.474707     G  0.278722\n",
+       "2  0.450566  0.361604  0.800696     D  0.443519\n",
+       "3  0.418162  0.145864  0.940385     D  0.058974\n",
+       "4  0.833118  0.815866  0.988112     G  0.782633"
       ]
      },
      "execution_count": 2,
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1a29f5019874cce95031bc917487213",
+       "model_id": "c655d7dd4f01402ba6594a19bb1b92c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x13021baf0>"
+       "<jscatter.jscatter.Scatter at 0x15a07da80>"
       ]
      },
      "execution_count": 4,
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "scatter.color(by='group').size(6).height(320).selection(df.query('x < 0.5').index).axes(grid=True, labels=['X', 'Y'])"
+    "scatter.color(by='group').size(by='value').height(320).selection(df.query('x < 0.5').index).axes(grid=True, labels=['X', 'Y']).legend(True)"
    ]
   },
   {
@@ -215,7 +215,7 @@
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x13021baf0>"
+       "<jscatter.jscatter.Scatter at 0x15a07da80>"
       ]
      },
      "execution_count": 5,
@@ -248,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "surrounded-discharge",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57adfbc3405f40baae4727f2b2ce4779",
+       "model_id": "40578e1f9a3f4304964feff2a4b4c2bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "deluxe-illustration",
    "metadata": {},
    "outputs": [],
@@ -363,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "educated-cheat",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0c8f2745fee4f93b13e566cc2d4317e",
+       "model_id": "c3d475eb9f52492fa9e18a87cb8fcf95",
        "version_major": 2,
        "version_minor": 0
       },
