--- a/notebooks/get-started.ipynb
+++ b/notebooks/get-started.ipynb
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac1e3f057ccf46e19cc404d3467f1aff",
+       "model_id": "bc9bce3e345d4d6fba2be32e2291c8a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eadba65a78474820bd804a47f2f9bb59",
+       "model_id": "1e73d128b52a4391843eda42fa11bd65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,7 +102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f24c8db9bed94240bdd95d597587e894",
+       "model_id": "84fe978d439845b3aa4559c220716f13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,6 +122,7 @@
     "  size=8, # static encoding\n",
     "  color_by='group', # data-driven encoding\n",
     "  opacity_by='density', # view-driven encoding\n",
+    "  legend=True,\n",
     ")"
    ]
   },
@@ -142,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "751fc0b7726d463789fca8cc9ae5ee19",
+       "model_id": "a76f5bca71fe462c97396b51b2bf465c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,6 +167,7 @@
     "scatter.color(by='mass', map='plasma', order='reverse')\n",
     "scatter.opacity(by='density')\n",
     "scatter.size(by='pval', map=[2, 4, 6, 8, 10])\n",
+    "scatter.legend(True)\n",
     "scatter.height(300)\n",
     "scatter.background('black')\n",
     "scatter.show()"
@@ -189,16 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x12846eec0>"
+       "<jscatter.jscatter.Scatter at 0x169584e80>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,36 +218,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  1,   2,   5,   6,   7,   9,  10,  11,  12,  14,  17,  20,  23,\n",
-       "        29,  30,  32,  33,  34,  35,  37,  39,  45,  46,  47,  49,  50,\n",
-       "        52,  53,  57,  59,  64,  65,  67,  68,  69,  74,  76,  78,  85,\n",
-       "        87,  88,  89,  92,  93,  98,  99, 100, 101, 103, 105, 106, 107,\n",
-       "       110, 112, 113, 116, 117, 118, 120, 121, 122, 124, 127, 130, 131,\n",
-       "       133, 134, 135, 142, 144, 147, 150, 151, 155, 160, 161, 162, 167,\n",
-       "       169, 170, 172, 178, 179, 185, 187, 189, 191, 194, 196, 197, 198,\n",
-       "       199, 200, 201, 202, 203, 205, 206, 207, 208, 209, 210, 212, 214,\n",
-       "       215, 216, 217, 219, 220, 224, 226, 227, 228, 229, 230, 231, 232,\n",
-       "       234, 236, 237, 239, 240, 241, 243, 244, 246, 249, 250, 251, 252,\n",
-       "       253, 254, 255, 256, 258, 259, 260, 261, 262, 264, 267, 268, 270,\n",
-       "       273, 274, 275, 280, 281, 282, 283, 285, 287, 288, 289, 290, 292,\n",
-       "       294, 296, 298, 299, 302, 303, 305, 308, 313, 315, 317, 318, 320,\n",
-       "       322, 323, 324, 325, 326, 327, 331, 332, 333, 335, 336, 337, 338,\n",
-       "       340, 343, 344, 345, 348, 354, 355, 356, 359, 361, 363, 364, 366,\n",
-       "       367, 368, 371, 374, 377, 378, 379, 380, 381, 382, 383, 385, 386,\n",
-       "       387, 388, 389, 392, 395, 398, 399, 400, 401, 402, 405, 407, 408,\n",
-       "       412, 414, 415, 417, 418, 420, 423, 424, 425, 426, 427, 430, 431,\n",
-       "       432, 435, 436, 438, 439, 443, 444, 446, 447, 448, 454, 456, 457,\n",
-       "       458, 460, 461, 464, 465, 467, 468, 470, 474, 477, 478, 479, 482,\n",
-       "       484, 485, 487, 493, 495, 497, 499], dtype=uint32)"
+       "array([  0,   2,   4,   5,   6,   7,   8,  10,  14,  15,  20,  22,  23,\n",
+       "        24,  26,  28,  29,  30,  34,  35,  38,  42,  44,  45,  47,  50,\n",
+       "        55,  56,  58,  59,  61,  66,  68,  69,  70,  73,  74,  75,  76,\n",
+       "        77,  78,  83,  84,  85,  87,  90,  91,  92,  94,  97,  98,  99,\n",
+       "       105, 107, 109, 111, 112, 113, 115, 118, 121, 122, 123, 125, 127,\n",
+       "       129, 131, 133, 134, 136, 138, 139, 141, 142, 145, 146, 148, 149,\n",
+       "       151, 152, 154, 155, 156, 161, 162, 167, 168, 170, 171, 172, 173,\n",
+       "       180, 182, 183, 186, 190, 192, 193, 194, 195, 196, 197, 199, 200,\n",
+       "       203, 207, 208, 212, 213, 216, 217, 218, 220, 221, 222, 227, 228,\n",
+       "       230, 231, 233, 241, 242, 243, 244, 245, 247, 248, 250, 251, 252,\n",
+       "       255, 257, 260, 261, 262, 266, 267, 270, 275, 278, 280, 288, 289,\n",
+       "       290, 291, 295, 296, 303, 304, 305, 309, 311, 313, 314, 315, 316,\n",
+       "       317, 318, 320, 322, 325, 330, 331, 333, 334, 335, 336, 338, 339,\n",
+       "       341, 346, 347, 348, 350, 351, 352, 353, 354, 355, 359, 363, 364,\n",
+       "       365, 367, 368, 371, 372, 376, 377, 378, 379, 382, 385, 386, 390,\n",
+       "       391, 393, 394, 395, 397, 399, 402, 404, 405, 406, 415, 417, 418,\n",
+       "       420, 422, 423, 424, 425, 426, 434, 435, 436, 442, 444, 446, 447,\n",
+       "       449, 451, 452, 454, 457, 459, 460, 462, 465, 466, 468, 472, 474,\n",
+       "       475, 476, 477, 478, 485, 487, 491, 492, 495, 497, 498, 499],\n",
+       "      dtype=uint32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,13 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f042e48f3f7f4499b2e01414171bdcf6",
+       "model_id": "dd1ccf120a674443b527f7074effda0b",
        "version_major": 2,
        "version_minor": 0
       },
